--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/RPGViviesBontron.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.utils.jar=C:\\Users\\Julien\\Downloads\\utils.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.utils.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
